@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2015-2018 Laboratoire de Recherche et Développement de
+# Copyright (C) 2015-2019 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -105,17 +105,17 @@ HOA: v1
 States: 2
 Start: 0
 AP: 2 "a" "b"
-acc-name: parity min even 2
-Acceptance: 2 Inf(0) | Fin(1)
+acc-name: Buchi
+Acceptance: 1 Inf(0)
 properties: trans-labels explicit-labels trans-acc complete
 properties: deterministic stutter-invariant
 --BODY--
 State: 0
-[!0 | !1] 0
-[0&1] 1 {1}
+[!0 | !1] 0 {0}
+[0&1] 1
 State: 1
 [!0 | !1] 0 {0}
-[0&1] 1 {1}
+[0&1] 1
 --END--
 EOF
 diff out expected
@@ -128,17 +128,17 @@ HOA: v1
 States: 2
 Start: 0
 AP: 1 "a"
-acc-name: parity min even 2
-Acceptance: 2 Inf(0) | Fin(1)
+acc-name: Buchi
+Acceptance: 1 Inf(0)
 properties: trans-labels explicit-labels trans-acc complete
 properties: deterministic stutter-invariant
 --BODY--
 State: 0
-[!0] 0
-[0] 1 {1}
+[!0] 0 {0}
+[0] 1
 State: 1
 [!0] 0 {0}
-[0] 1 {1}
+[0] 1
 --END--
 EOF
 diff out expected
